--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,8 @@ bd.tmp
 92b33381-pl3-42a1-bee0-bbb9d132e83f.tmp
 version.txt
 actualizar.txt
+addon_last_update.txt
+contenido_last_update.txt
 Mipal2025-main/
 
 # IDE settings
