Performance boost: Native cache implementation & remove fakeredis
- Replaced fakeredis with custom in-memory CacheManager (utils/cache.py)
- Implemented shared metadata cache to reduce Debrid API calls
- Optimized playback flow: per-user unrestrict logic moved to /playback
- Added 'NDK ACTUALIZANDO...' stream feedback during DB initialization
- Cleaned up dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,35 @@
-fastapi
-uvicorn
-starlette
-requests
-bencode.py
-jinja2
 aiocron
-python-dotenv
 aiosqlite
+annotated-doc
+annotated-types
+anyio
+bencode.py
+bencodepy
+certifi
+charset-normalizer
+click
+cronsim
+dateutil
+fastapi
+h11
+httpcore
+httpx
+idna
+jinja2
+markupsafe
 pycryptodome
-httpx[socks]
-fakeredis
+pydantic
+pydantic-core
+python-dateutil
+python-dotenv
+redis
+requests
+six
+socksio
+sortedcontainers
+starlette
+typing-extensions
+typing-inspection
+tzlocal
+urllib3
+uvicorn
